# trussium

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  codeql.yml  release.yml
docs/: ARCHITECTURE.MD  DEVELOPMENT.md  ROADMAP.md  VISION.md
docs/adr/: 0001-language-strategy.md  0002-project-structure.md  0003-capability-first-architecture.md  0004-plugin-architecture.md  0005-runtime-bootstrap-architecture.md  README.md
src/trussium/: __init__.py  __main__.py
src/trussium/api/: __init__.py  chat.py  dependencies.py  health.py  router.py  sse.py
src/trussium/app/: __init__.py  bootstrap.py  factory.py
src/trussium/capabilities/: __init__.py
src/trussium/capabilities/chat/: __init__.py  capability.py  models.py
src/trussium/config/: settings.py
src/trussium/core/: constants.py
src/trussium/providers/: __init__.py
src/trussium/providers/openai/: __init__.py  chat.py
tests/: conftest.py
tests/unit/: test_main.py  test_smoke.py
tests/unit/api/: test_chat.py  test_health.py  test_sse.py
tests/unit/app/: test_bootstrap.py  test_factory.py
tests/unit/capabilities/chat/: test_capability.py  test_models.py
tests/unit/config/: test_settings.py
tests/unit/providers/openai/: test_chat.py
