[project]
name = "trussium"
version = "0.1.0"
description = "Cloud-native AI runtime platform."
readme = "README.md"
requires-python = ">=3.12"

dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.12.5",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[tool.ruff]

line-length = 100
target-version = "py312"

src = ["src", "tests"]

[tool.ruff.lint]

select = [
    "E",
    "F",
    "W",

    "I",

    "UP",

    "B",

    "SIM",

    "C4",

    "PIE",

    "RUF",
]

ignore = []

fixable = ["ALL"]

[tool.ruff.format]

quote-style = "double"

indent-style = "space"

line-ending = "lf"

docstring-code-format = true

[tool.pytest.ini_options]

testpaths = [
    "tests",
]

pythonpath = [
    "src",
]

addopts = "-ra"

[tool.mypy]

python_version = "3.12"

strict = true

pretty = true

show_error_codes = true

warn_unused_configs = true

warn_return_any = true

warn_unused_ignores = true

disallow_untyped_defs = true

exclude = [
    ".venv",
]
