[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "trussium"
version = "0.8.0"
description = "Cloud-native AI runtime platform."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Trussium Contributors" }
]
keywords = [
    "ai",
    "llm",
    "runtime",
    "gateway",
    "grpc",
    "fastapi",
    "cloud-native",
    "kubernetes",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.1",
    "openai>=2.48.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.5",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pre-commit>=4.2.0",
    "python-semantic-release>=10.0.0",
    "httpx>=0.28.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "W",    # warnings
    "I",    # import sorting
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "C4",   # comprehensions
    "PIE",  # miscellaneous improvements
    "RUF",  # Ruff-specific rules
]

ignore = []

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true


[tool.pytest.ini_options]
minversion = "8.0"

testpaths = [
    "tests",
]

pythonpath = [
    "src",
]

addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
]


[tool.mypy]
python_version = "3.12"

strict = true

pretty = true

show_error_codes = true
show_error_context = true
show_column_numbers = true

warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true

disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true

no_implicit_optional = true
strict_equality = true

exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.coverage.run]
source = [
    "src/trussium",
]

branch = true


[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version"
]

branch = "main"

tag_format = "v{version}"

commit_message = "chore(release): {version}"

allow_zero_version = true
major_on_zero = false

upload_to_repository = false
upload_to_release = true

build_command = """
uv lock
git add uv.lock
uv build
"""

[tool.hatch.build.targets.wheel]
packages = ["src/trussium"]

[tool.hatch.build.targets.wheel.force-include]
"src/trussium/py.typed" = "trussium/py.typed"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
